css/main.css
/* ... */
.item-folio__cat {
    color: rgba(255, 255, 255, 0.5);
    font-family: "montserrat-light", sans-serif;
    font-size: 1.4rem;
    line-height: 1.714;
    margin-bottom: 0;
}

.item-folio__caption {
    display: none;
}

.item-folio__project-link {
    display: block;
    color: #FFFFFF;
    box-shadow: 0 0 0 1px #FFFFFF;
    border-radius: 50%;
    height: 4.2rem;
    width: 4.2rem;
    text-align: center;
    z-index: 500;
    position: absolute;
    top: 3rem;
    left: 3rem;
    opacity: 0;
    visibility: hidden;
    -webkit-transform: translate3d(0, -100%, 0);
    -ms-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
}

.item-folio__project-link i {
    font-size: 1.8rem;
    line-height: 4.2rem;
}

.item-folio__project-link::before {
    display: block;
    content: "";
    height: 3rem;
    width: 1px;
    background-color: rgba(255, 255, 255, 0.1);
    position: absolute;
    top: -3rem;
    left: 50%;
}

.item-folio__project-link:hover,
.item-folio__project-link:focus,
.item-folio__project-link:active {
    background-color: #FFFFFF;
    color: #000000;
}


/* on hover 
 * ----------------------------------------------- */
.item-folio:hover .item-folio__thumb a::before {
    opacity: 1;
    visibility: visible;
}

.item-folio:hover .item-folio__thumb a::after {
    opacity: 1;
    visibility: visible;
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
}

.item-folio:hover .item-folio__thumb img {
    -webkit-transform: scale(1.05);
    -ms-transform: scale(1.05);
    transform: scale(1.05);
}

.item-folio:hover .item-folio__project-link,
.item-folio:hover .item-folio__text {
    opacity: 1;
    visibility: visible;
    -webkit-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}


/* ------------------------------------------------------------------- 
 * responsive:
 * works
 * ------------------------------------------------------------------- */
@media only screen and (max-width: 800px) {
    .item-folio__title, .item-folio__cat {
        font-size: 1.3rem;
    }
}

@media only screen and (max-width: 600px) {
    .s-works {
        padding-bottom: 12rem;
    }
    .s-works .intro-wrap {
        padding: 12rem 0 25.2rem;
    }
    .works-content {
        margin-top: -25.2rem;
    }
    .masonry__brick {
        float: none;
        width: 100%;
    }
    .item-folio__title, .item-folio__cat {
        font-size: 1.4rem;
    }
}



/* ===================================================================
 * # clients
 *
 * ------------------------------------------------------------------- */
.s-clients {
    padding-top: 16.2rem;
    padding-bottom: 16.8rem;
    background-color: #e6e6e6;
    color: #757575;
    position: relative;
}

/*
 * ## timeline
 */
.timeline {
    margin: 0 auto;
    font-family: "lora-regular", serif;
    font-size: 1.7rem;
    overflow-x: hidden;
    position: relative;
}

.timeline h2{
    color: white;
    font-family: "montserrat-medium", sans-serif;
    margin-left: 1.8rem;
    margin-right: 1.8rem;
    margin-bottom: 0.5rem;
}

.timeline h3{
    color: #4db8ff;
    font-family: "montserrat-regular", sans-serif;
    margin-left: 1.8rem;
    margin-right: 1.8rem;
    margin-top: 0;
    font-size: 2rem;
}

.timeline p{
    margin-left: 1.8rem;
    margin-right: 1.8rem;
}

.timeline-middle-line {
    content: "";
    background: #4db8ff;
    width: 2px;
    height: 100%;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}
.timeline-item {
    width: 100%;
    margin-bottom: 70px;
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.timeline-item:nth-child(even) .timeline-content:hover:after,
.timeline-item:nth-child(even) .timeline-content:focus:after {
    border-color: transparent black transparent transparent;
}
.timeline-item:nth-child(odd) .timeline-content:hover:after,
.timeline-item:nth-child(odd) .timeline-content:focus:after {
    border-color: transparent transparent transparent black;
}


.timeline-content:hover:before,
.timeline-content:focus:before {
    -webkit-animation: bg-pan-animation 10s ease-in-out infinite;
    animation: bg-pan-animation 10s ease-in-out infinite;
}

@-webkit-keyframes bg-pan-animation {
    0%{background-position:50% 100%}
    33%{background-position:100% 0%}
    66%{background-position:0% 50%}
    100%{background-position:50% 100%}
}
@keyframes bg-pan-animation {
    0%{background-position:50% 100%}
    33%{background-position:100% 0%}
    66%{background-position:0% 50%}
    100%{background-position:50% 100%}
}

.timeline-item .timeline-content {
    color: white;
    display: block;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    position: relative;
    z-index: 2;
    width: 45%;
    padding: 10px 30px;
    border-radius: 4px;
    margin: 10px 10px;
    overflow: hidden;
}

.timeline-item .timeline-content::before {
    background-image: var(--experience-background-image);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50%;
    width: 100%;
    height: 100%;
    filter: blur(2px) brightness(50%);
    content: "";
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    z-index: -1;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;

}

.timeline-item .timeline-content .inner{
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);
    overflow: auto;
    height: 100%;
    display: table;
    margin: 2rem auto;
    box-shadow: 0 0 15px 15px rgba(0, 0, 0, 0.5);
}

.timeline-item:nth-child(even) .timeline-content {
    float: right;
    padding: 40px 30px 10px 30px;
}
.timeline-item:nth-child(even) .timeline-content .date {
    right: auto;
    z-index: 2;
    left: 0;
}
/* ... */

